# kakuyomu-wordsalad

./: .gitignore  README.md  pyproject.toml
kakuyomu/: README.md  pyproject.toml
kakuyomu/src/kakuyomu/: main.py  models.py
kakuyomu/src/kakuyomu/crews/story_analysis_crew/: story_analysis_crew.py
kakuyomu/src/kakuyomu/crews/story_analysis_crew/config/: agents.yaml  tasks.yaml
src/kakuyomu/: models.py
src/kakuyomu/crews/story_analysis_crew/: story_analysis_crew.py
src/kakuyomu_wordsalad/: main.py
src/kakuyomu_wordsalad/crews/story_analysis_crew/: story_analysis_crew.py
src/kakuyomu_wordsalad/crews/story_analysis_crew/config/: agents.yaml  tasks.yaml
