[project]
name = "kakuyomu"
version = "0.1.0"
description = "kakuyomu using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0",
    "crewai-tools[mcp]",
    "requests>=2.32.5",
    "beautifulsoup4>=4.13.5",
    "pydantic>=2.11.9",
    "mcp>=1.14.0",
]

[project.scripts]
kickoff = "kakuyomu.main:kickoff"
run_crew = "kakuyomu.main:kickoff"
plot = "kakuyomu.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[dependency-groups]
dev = [
    "ruff>=0.13.0",
]
