[project]
name = "kakuyomu_wordsalad"
version = "0.1.0"
description = "CrewAIを使ったカクヨムのワードサラダ判定器"
authors = [{ name = "106-", email = "segmentation-fault@yandex.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0",
    "crewai-tools[mcp]",
    "requests>=2.32.5",
    "beautifulsoup4>=4.13.5",
    "pydantic>=2.11.9",
    "mcp>=1.14.0",
]

[project.scripts]
kickoff = "kakuyomu_wordsalad.main:kickoff"
run_crew = "kakuyomu_wordsalad.main:kickoff"
plot = "kakuyomu_wordsalad.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[dependency-groups]
dev = [
    "ruff>=0.13.0",
]
